apps/gitlab/gitlab/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab-webservice
  namespace: gitlab
spec:
  parentRefs:
    - name: gitlab
      kind: ListenerSet
      group: gateway.networking.k8s.io
      sectionName: gitlab-webservice
  rules:
    - backendRefs:
        - name: gitlab-webservice-default
          port: 8181
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab-registry
  namespace: gitlab
spec:
  parentRefs:
    - name: gitlab
      kind: ListenerSet
      group: gateway.networking.k8s.io
      sectionName: gitlab-registry
  rules:
    - backendRefs:
        - name: gitlab-registry
          port: 5000
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab-pages
  namespace: gitlab
spec:
  parentRefs:
    - name: gitlab
      kind: ListenerSet
      group: gateway.networking.k8s.io
      sectionName: gitlab-pages
  rules:
    - backendRefs:
        - name: gitlab-gitlab-pages
          port: 8090
      matches:
        - path:
            type: PathPrefix
            value: /
